add tictactoe board

--- a/index.html
+++ b/index.html
@@ -7,5 +7,17 @@
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="gameboard">
+      <div id="left-corner-top" class="cell"></div>
+      <div id="top-middle" class="cell"></div>
+      <div id="right-corner-top" class="cell"></div>
+      <div id="middle-left" class="cell"></div>
+      <div class="cell"></div>
+      <div id="middle-right" class="cell"></div>
+      <div id="left-corner-bottom" class="cell"></div>
+      <div id="bottom-middle" class="cell"></div>
+      <div id="right-corner-bottom" class="cell"></div>
+    </div>
+  </body>
 </html>
