--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   </head>
   <body>
     <div class="gameboard">
-      <div id="left-corner-top" class="cell"></div>
-      <div id="top-middle" class="cell"></div>
-      <div id="right-corner-top" class="cell"></div>
-      <div id="middle-left" class="cell"></div>
-      <div class="cell"></div>
-      <div id="middle-right" class="cell"></div>
-      <div id="left-corner-bottom" class="cell"></div>
-      <div id="bottom-middle" class="cell"></div>
-      <div id="right-corner-bottom" class="cell"></div>
+      <div id="left-corner-top" class="cell top-row"></div>
+      <div id="top-middle" class="cell top-row"></div>
+      <div id="right-corner-top" class="cell top-row"></div>
+      <div id="middle-left" class="cell middle-row"></div>
+      <div class="cell middle-row"></div>
+      <div id="middle-right" class="cell middle-row"></div>
+      <div id="left-corner-bottom" class="cell bottom-row"></div>
+      <div id="bottom-middle" class="cell bottom-row"></div>
+      <div id="right-corner-bottom" class="cell bottom-row"></div>
     </div>
   </body>
 </html>
