add two players and every click switch turns

--- a/index.html
+++ b/index.html
@@ -9,15 +9,30 @@
   </head>
   <body>
     <div class="gameboard">
-      <div id="left-corner-top" class="cell top-row"></div>
-      <div id="top-middle" class="cell top-row"></div>
-      <div id="right-corner-top" class="cell top-row"></div>
-      <div id="middle-left" class="cell middle-row"></div>
-      <div class="cell middle-row"></div>
-      <div id="middle-right" class="cell middle-row"></div>
-      <div id="left-corner-bottom" class="cell bottom-row"></div>
-      <div id="bottom-middle" class="cell bottom-row"></div>
-      <div id="right-corner-bottom" class="cell bottom-row"></div>
+      <div id="left-corner-top" class="cell" data-row="0" data-column="0"></div>
+      <div id="top-middle" class="cell" data-row="0" data-column="1"></div>
+      <div
+        id="right-corner-top"
+        class="cell"
+        data-row="0"
+        data-column="2"
+      ></div>
+      <div id="middle-left" class="cell" data-row="1" data-column="0"></div>
+      <div class="cell" data-row="1" data-column="1"></div>
+      <div id="middle-right" class="cell" data-row="1" data-column="2"></div>
+      <div
+        id="left-corner-bottom"
+        class="cell"
+        data-row="2"
+        data-column="0"
+      ></div>
+      <div id="bottom-middle" class="cell" data-row="2" data-column="1"></div>
+      <div
+        id="right-corner-bottom"
+        class="cell"
+        data-row="2"
+        data-column="2"
+      ></div>
     </div>
   </body>
 </html>
