create modal that shows winner and resets board

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <script defer src="script.js"></script>
   </head>
   <body>
+    <!-- <h1 class="winner"></h1> -->
+    <dialog>
+      <div class="dialog-container">
+        <h1 class="winner"></h1>
+        <button autofocus>Play Again</button>
+      </div>
+    </dialog>
+
     <div class="gameboard">
       <div id="left-corner-top" class="cell" data-row="0" data-column="0"></div>
       <div id="top-middle" class="cell" data-row="0" data-column="1"></div>
