--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script defer src="script.js"></script>
   </head>
   <body>
-    <!-- <h1 class="winner"></h1> -->
+    <h1 class="current-turn"></h1>
     <dialog>
       <div class="dialog-container">
         <h1 class="winner"></h1>
