display scores with name

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <script defer src="script.js"></script>
   </head>
   <body>
-    <h1 class="current-turn"></h1>
+    <div class="title">Tic-Tac-Toe</div>
+    <div class="player-info">
+      <h2 class="player-one-score"></h2>
+      <h1 class="current-turn"></h1>
+      <h2 class="player-two-score"></h2>
+    </div>
     <dialog>
       <div class="dialog-container">
         <h1 class="winner"></h1>
